--- a/TODO
+++ b/TODO
@@ -18,4 +18,11 @@ FUND
 
 UI
  - text/files rimangono attivi
- - i pulsanti _sotto_ "DATA" devono essere riabilitati dopo il caricamento dell'immagine
+ - Eliminare le righe di prova nella tabella
+ - extract per quanto riguarda i files è forse fuorviante, visto che semplicemente legge i dati dalla cartella, forse andrebbe chiamato (sia per text che per files) load o read o decode
+ - il blur quando l'immagine perde il focus è forse superfluo
+
+Bugs
+ - la prima volta che apro l'immagine non la visualizza
+ - sistemare i fonts
+ - rispondere bene al `Cancel` su un'operazione
