--- a/TODO
+++ b/TODO
@@ -1,27 +1,17 @@
 TODO
 
+
     · Fare un controller per il tab-group
     · markdown text use
-    · jpeg upload
 
 FUND
-    · separare le fasi di utilizzo (aggiunta files-estrazione)
-
-    · abilitare/disabilitare pulsanti all'occorrenza
     · mettere in basso una status bar
-    · alert se provo a salvare prima di aver caricato
-        l'immagine - oppure abilitare il pulsante solo
-        quando l'ho caricata
-
----- gui
-    · renderlo più carino all'apertura ?
 
 UI
  - text/files rimangono attivi
  - Eliminare le righe di prova nella tabella
  - extract per quanto riguarda i files è forse fuorviante, visto che semplicemente legge i dati dalla cartella, forse andrebbe chiamato (sia per text che per files) load o read o decode
+ - la tabella dei files si estende troppo sia verticalmente che orizzontalmente regardless di quel ch'ha tutt'attorno
 
 Bugs
- - la prima volta che apro l'immagine non la visualizza
  - sistemare i fonts
- - rispondere bene al `Cancel` su un'operazione
