better sizing some image, fix random filter diversity on cover img, done some TODO

--- a/TODO
+++ b/TODO
@@ -13,6 +13,7 @@ Bugs
 Future
  · markdown text use
  · cifratura dei contenuti (nella UI serve aggiungere una finestra o usiamo una dialog dopo la finestra di salvataggio con la possibilità di pwd vuota per nessuna pwd)
+ · aggiungere le iconeza!
 
 
 DONE
