--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ OPT
 Bugs
  · sistemare i fonts
  · la tabella dei file ha problemi di overflow e wrapping con tanto contenuto
+ · succedono cose strane se scrivi file e poi testo nella stessa immagine (? sembrava..) 
 
 Future
  · markdown text use
@@ -15,7 +16,7 @@ Future
  · riduci a icona
  · tabelle file: Nome - %; dett: Percorso - KB
  · funzione che calcola percentuale immagine usata (la funzione 'coordPercData(%)' crea l'overlay html semitrasparente)
-
+ · LOADING su upload, read, write, extract...
 
 DONE
  · partire con il pulsante text "ingrandito", essendo la prima scelta
