--- a/TODO
+++ b/TODO
@@ -1,14 +1,11 @@
 TODO
 
-· Add idle/ready state functions
-· show percentage
 
 OPT
  · mettere in basso una status bar
  · la tabella dei files si estende troppo sia verticalmente che orizzontalmente regardless di quel ch'ha tutt'attorno
 
 Bugs
- · sistemare i fonts
  · la tabella dei file ha problemi di overflow e wrapping con tanto contenuto
  · succedono cose strane se scrivi file e poi testo nella stessa immagine (? sembrava..) 
 
@@ -17,10 +14,13 @@ Future
  · markdown text use
  · cifratura dei contenuti (nella UI serve aggiungere una finestra o usiamo una dialog dopo la finestra di salvataggio con la possibilità di pwd vuota per nessuna pwd)
  · tabelle file: Nome - %; dett: Percorso - KB
- · funzione che calcola percentuale immagine usata (la funzione 'coordPercData(%)' crea l'overlay html semitrasparente)
+ · percentuale file su bottone MEDIA
  · LOADING su upload, read, write, extract...
 
 DONE
+ · Add idle/ready state functions
+ · sistemare i fonts
+ · funzione che calcola percentuale immagine usata (la funzione 'coordPercData(%)' crea l'overlay html semitrasparente)
  · partire con il pulsante text "ingrandito", essendo la prima scelta
  · extract per quanto riguarda i files è forse fuorviante, visto che semplicemente legge i dati dalla cartella, forse andrebbe chiamato (sia per text che per files) load o read o decode
  · riduci a icona
